# SoPrj-B10

./: .gitignore  .gitmodules  CMakeLists.txt  POS.sln  add_product_prompts.c  login.c  main_prompts.c  prompts.c  prompts.h  sell_prompts.c  settlement.c  settlement.h  settlement_prompt.c  settlement_prompt.h  settlement_prompts.c
POS/: Admin.c  Admin.h  CMakeLists.txt  POS.c  POS.vcxproj  POS.vcxproj.filters  Util.c  Util.h  add_product_prompts.c  add_product_prompts.h  common_prompts.c  common_prompts.h  login.c  main.c  main_prompts.c  main_prompts.h  payment.c  payment.h  payment_prompts.c  payment_prompts.h  pos_main.c  pos_main.h  product.c  product.h  product_management_prompt.c  product_management_prompts.c  product_management_prompts.h  sell_prompts.c  sell_prompts.h  settlement.c  settlement_prompts.c  table_amount_prompt.c  type.h  types.h  utils.c  utils.h
POS.xcodeproj/: project.pbxproj
POS.xcodeproj/xcshareddata/xcschemes/: POS.xcscheme
test/: tests.c
